<resources>
    <string name="app_name">1000Words</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_new_user">Register new user</string>
    <string name="fb_sign_in_button">Fb</string>
    <string name="g_sign_in_button">G+</string>
    <string name="or_sign_in_as">Or sign by </string>
    <string name="guest_sign_in_button">Guest </string>
    <string name="error_valid_user">Error of validathion</string>
    <string name="facebook_app_id">125535264741269</string>
    <string name="userNameRes">UserName</string>
    <string name="userEmailRes">UserEmail</string>
    <string name="your_learning_progress">Your learning progress</string>
    <string name="tabswitch">tabSwitch</string>
    <string name="start_teaching">Start teaching</string>
    <string name="chenge_profile">Chenge profile</string>
    <string name="settings">Settings</string>
    <string name="your_progress">Your progress</string>
    <string name="action_settings">action_settings</string>
</resources>
