<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/profileImageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            android:text="@string/userNameRes"
            tools:ignore="LabelFor"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textEmailAddress"
            android:text="@string/userEmailRes"
            tools:ignore="LabelFor"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_learning_progress"/>

        <ProgressBar
            android:id="@+id/learningProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="50"
            android:visibility="visible"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="32dp"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:id="@+id/profileImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:contentDescription=""

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_start"
            tools:ignore="ContentDescription,RtlHardcoded"/>
    </android.support.v7.widget.CardView>

</LinearLayout>